package com.rminfo.protobuf.item;

import com.baidu.bjf.remoting.protobuf.annotation.Protobuf;

import java.util.List;

/**
 * Created by junior on 10:44 2018/7/16.
 */

public class MatchItemProto0 {
    @Protobuf
    public Byte score2;
    @Protobuf
    public Byte score1;
    @Protobuf
    public Integer leagueId;
    @Protobuf
    public String CompetitorPeriodScore;
    @Protobuf
    public String leagueName;
    @Protobuf
    public String periodSetScore;
    @Protobuf
    public Integer prty;
    @Protobuf
    public Byte isVisible;
    @Protobuf
    public Integer sportId;
    @Protobuf
    public Boolean isInLive;
    @Protobuf
    public Integer isActive;
    @Protobuf
    public String matchStatusName;
    @Protobuf
    public String regionName;
    @Protobuf
    public String currentScore;
    @Protobuf
    public String matchStatus;
    @Protobuf
    public Integer matchId;
    @Protobuf
    public Integer matchPeriodId;
    @Protobuf
    public Integer H5HomePageAction;
    @Protobuf
    public Integer marketCnt;
    @Protobuf
    public Integer regionNum;
    @Protobuf
    public Integer preListAction;
    @Protobuf
    public Integer minute;
    @Protobuf
    public Integer inLiveListAction;
    @Protobuf
    public Integer status;
    @Protobuf
    public List<Competitor0> competitors;
    @Protobuf
    public List<MarketTypes0> marketTypes;
}
