package com.rminfo.protobuf.item;

import com.baidu.bjf.remoting.protobuf.annotation.Protobuf;

/**
 * Created by junior on 10:44 2018/7/16.
 */
public class OddsItemProto0 {
    @Protobuf
    public Byte eventPartId;
    @Protobuf
    public Byte priArgumentNeedToDelete;
    @Protobuf
    public Integer leagueId;
    @Protobuf
    public String oddsValuesMated;
    @Protobuf
    public String oddsValue;
    @Protobuf
    public String homeTeamArgument;
    @Protobuf
    public Integer matchId;
    @Protobuf
    public Byte isVisible;
    @Protobuf
    public Byte optionNum;
    @Protobuf
    public Integer sportId;
    @Protobuf
    public Byte isInLive;
    @Protobuf
    public String marketName;
    @Protobuf
    public String marketFullId;
    @Protobuf
    public String optionName;
    @Protobuf
    public Integer marketId;
    @Protobuf
    public String marketType;
    @Protobuf
    public Integer mSort;
    @Protobuf
    public Boolean isActive;
    @Protobuf
    public String isPrimeArgument;
    @Protobuf
    public Integer oddsId;
    @Protobuf
    public Byte isShowOptionName_detail;
    @Protobuf
    public Byte isShowOptionName_list;
    @Protobuf
    public Integer matchPeriodId;
    @Protobuf
    public String argument;
    @Protobuf
    public Integer periodNum;
    @Protobuf
    public Byte dataType;
    @Protobuf
    public com.rminfo.protobuf.item.PrimeArgumentProto PrimeArgumentProto;

}
